[gd_scene load_steps=15 format=3 uid="uid://cshvwy3ug67db"]

[ext_resource type="Script" path="res://Functionality/Scripts/magical_golem.gd" id="1_ipdm2"]
[ext_resource type="Texture2D" uid="uid://cbs3mvlkaowvo" path="res://Assets/pixilart-sprite.png" id="2_g0bbc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_av3ti"]
radius = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_m0cc2"]
atlas = ExtResource("2_g0bbc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3o3u"]
atlas = ExtResource("2_g0bbc")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mssrj"]
atlas = ExtResource("2_g0bbc")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lh4f"]
atlas = ExtResource("2_g0bbc")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c33oo"]
atlas = ExtResource("2_g0bbc")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljobj"]
atlas = ExtResource("2_g0bbc")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_an0if"]
atlas = ExtResource("2_g0bbc")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1gkx"]
atlas = ExtResource("2_g0bbc")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvsh6"]
atlas = ExtResource("2_g0bbc")
region = Rect2(512, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_grqkx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0cc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3o3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mssrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lh4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c33oo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljobj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_an0if")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1gkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvsh6")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_uerxe"]
radius = 22.8473

[node name="magical_golem" type="CharacterBody2D"]
script = ExtResource("1_ipdm2")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_av3ti")
disabled = true

[node name="golem_sprite" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.229536, 0.174185, 1)
position = Vector2(3, 0)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_grqkx")
animation = &"walking"

[node name="AttackRange" type="Area2D" parent="."]

[node name="RangeShape" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_uerxe")

[node name="Attacktimer" type="Timer" parent="."]

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="Attacktimer" to="." method="_on_attacktimer_timeout"]
